Fixed back arrow alignment for production.

--- a/css/styles.css
+++ b/css/styles.css
@@ -529,7 +529,7 @@ top: -16px;
 .back-arrow{
   position: absolute;
   top: 827px;
-  right: 701px;
+  right: 702px;
 }
 
 .next-arrow{
